# figure-intersection

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE-3RD-PARTY.txt  README.md  main.cpp
.github/workflows/: build.yml
reports/: descrption  george-21.05.md  reports.md
src/: main.cpp
src/core/: CMakeLists.txt
src/core/Alghoritms/: Alghoritms.cpp  Alghoritms.h
src/core/Algorithms/: Algorithms.cpp  Algorithms.h
src/core/ConvexFigure/: ConvexFigure.cpp  ConvexFigure.h
src/core/Figure/: Figure.cpp  Figure.h
src/core/Point/: Point.h
src/core/Segment/: Segment.cpp  Segment.h
src/core/Triangle/: Triangle.h
src/gui/: CMakeLIsts.txt  CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/in-out/: CMakeLists.txt  in_out.cpp  in_out.h  input-output.cpp
tests/: CMakeLists.txt
tests/test_core/: CMakeLists.txt  test_convexfigure.cpp  test_figure.cpp  test_in_point.cpp  test_intersection.cpp  test_segment.cpp  test_triangle.cpp
tests/test_in-out/: CMakeLists.txt  test_input.cpp  test_output.cpp
